--- a/packages/dca-backend/package.json
+++ b/packages/dca-backend/package.json
@@ -22,7 +22,9 @@
     "mongo:stop": "docker stop mongo || true",
     "mongo:rm": "docker rm -f mongo || true",
     "mongo:logs": "docker logs -f mongo",
-    "sentry:sourcemaps": "pnpm dotenvx run -- sentry-cli sourcemaps inject --org $SENTRY_ORG --project $SENTRY_PROJECT ./dist && sentry-cli sourcemaps upload --org $SENTRY_ORG --project $SENTRY_PROJECT ./dist"
+    "sentry:sourcemaps": "pnpm dotenvx run -- sentry-cli sourcemaps inject --org $SENTRY_ORG --project $SENTRY_PROJECT ./dist && sentry-cli sourcemaps upload --org $SENTRY_ORG --project $SENTRY_PROJECT ./dist",
+    "dev:api": "pnpm dotenvx run -- pnpm tsx watch src/bin/apiServer.ts",
+    "dev:worker": "pnpm dotenvx run -- pnpm tsx watch src/bin/jobWorker.ts"
   },
   "repository": {
     "type": "git",
