--- a/packages/dca-backend/package.json
+++ b/packages/dca-backend/package.json
@@ -49,6 +49,8 @@
     "@lit-protocol/contracts-sdk": "^7.3.0",
     "@lit-protocol/lit-node-client": "^7.3.0",
     "@lit-protocol/types": "^7.3.0",
+    "@lit-protocol/vincent-ability-aave": "0.2.4",
+    "@lit-protocol/vincent-ability-aave-smart-account": "0.0.1-mma",
     "@lit-protocol/vincent-ability-erc20-approval": "3.1.0",
     "@lit-protocol/vincent-ability-uniswap-swap": "5.0.0",
     "@lit-protocol/vincent-app-sdk": "2.2.1",
@@ -67,12 +69,14 @@
     "cors": "^2.8.5",
     "dataloader": "^2.2.3",
     "did-jwt": "^8.0.9",
+    "ethers": "^5.8.0",
     "express": "^4.21.2",
     "helmet": "^8.1.0",
     "mongoose": "^8.10.1",
     "node-cache": "^5.1.2",
     "semver": "^7.7.2",
-    "tslib": "^2.8.1"
+    "tslib": "^2.8.1",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@jest/globals": "^29.7.0",
@@ -80,10 +84,8 @@
     "@types/express": "^5.0.1",
     "@types/jest": "^29.5.14",
     "@types/semver": "^7.7.0",
-    "ethers": "^5.8.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.3.0",
-    "unbuild": "^3.5.0",
-    "zod": "^3.25.76"
+    "unbuild": "^3.5.0"
   }
 }
